Add resume, certifications, and refine layout

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="#" class="logo">SUHAIL<span>.KL</span></a>
             <div class="nav-links">
                 <a href="#about">About Me</a>
+                <a href="#certifications">Certifications</a>
                 <a href="#skills">Skills</a>
                 <a href="#projects">Projects</a>
                 <a href="#services">Services</a>
@@ -34,7 +35,11 @@
         <div class="container hero-content">
             <h1 class="glitch">SUHAIL KL</h1>
             <h2><span class="typing-text"></span></h2>
-            <a href="#contact" class="btn">Initiate Contact</a>
+            <div class="hero-btns">
+                <a href="#contact" class="btn">Initiate Contact</a>
+                <a href="https://drive.google.com/file/d/1HjLrVz8tWV4AWv7GqrRwNTv1EqNskwST/view?usp=sharing"
+                    target="_blank" class="btn btn-secondary">View Resume</a>
+            </div>
         </div>
     </section>
 
@@ -52,14 +57,29 @@
                         Analyst and Certified IT Infrastructure & Cyber SOC Analyst.</p>
                 </div>
                 <div class="about-stats">
-                    <!-- Placeholder for maybe an image or stats visual -->
-                    <ul class="cert-list">
-                        <li><span style="color:var(--accent-color)">>></span> EC-Council Certified SOC Analyst</li>
-                        <li><span style="color:var(--accent-color)">>></span> Certified IT Infrastructure & Cyber SOC
-                            Analyst</li>
-                        <li><span style="color:var(--accent-color)">>></span> RedTeam Hacker Academy Course Completion
-                        </li>
-                    </ul>
+                    <div class="badge-container">
+                        <img src="assets/eccouncil-badge.png" alt="EC-Council Certified SOC Analyst Badge"
+                            class="cert-badge">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Certifications Section -->
+    <section id="certifications" class="certifications">
+        <div class="container">
+            <h2 class="section-title">Certifications</h2>
+            <div class="cert-grid">
+                <div class="cert-card">
+                    <img src="assets/eccouncil-cert.png" alt="EC-Council Certified SOC Analyst Certificate">
+                    <h3>EC-Council Certified SOC Analyst</h3>
+                    <p>Credential ID: ECC6130894527</p>
+                </div>
+                <div class="cert-card">
+                    <img src="assets/redteam-cert.png" alt="RedTeam Hacker Academy Certificate">
+                    <h3>Certified IT Infrastructure & Cyber SOC Analyst</h3>
+                    <p>RedTeam Hacker Academy</p>
                 </div>
             </div>
         </div>
