Add animated scroll down indicator

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
                 <a href="https://drive.google.com/file/d/1HjLrVz8tWV4AWv7GqrRwNTv1EqNskwST/view?usp=sharing"
                     target="_blank" class="btn btn-secondary">View Resume</a>
             </div>
+
+            <div class="scroll-indicator">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </section>
 
